kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flask-color
  #annotations:
  #  nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: webcolor.jlcplab.com.br
    http:
      paths:
      - path: /overview.php
        pathType: Prefix
        backend:
          service:
            name: ingress-nginx-custom-default-backend
            port:
              number: 8080
      - path: /overview.html
        pathType: Prefix
        backend:
          service:
            name: ingress-nginx-custom-default-backend
            port:
              number: 8080
      - path: /
        pathType: Prefix
        backend:
          service:
            name: flask-color
            port:
              number: 5000
